--- a/rate.html
+++ b/rate.html
@@ -595,7 +595,7 @@
                 item.dataset.key = key; // Store the image key (UUID)
                 const coverButtonText = index === 0 ? i18next.t('common.cover') : i18next.t('ratePage.setCover');
                 item.innerHTML = `
-                    <img src="/api/image/${key}" alt="${i18next.t('common.image')} ${index + 1}">
+                    <img src="/api/image/${key}" alt="${i18next.t('common.image')} ${index + 1}" loading="lazy" decoding="async" fetchpriority="low" width="400" height="533">
                     <button type="button" class="remove-btn" onclick="removeImage(event, ${index})" title="${i18next.t('common.delete')} ${i18next.t('common.image')}">&times;</button>
                     <button type="button" class="set-cover-btn" onclick="setCoverImage(event, ${index})" title="${coverButtonText}">
                         ${coverButtonText}
