--- a/results.html
+++ b/results.html
@@ -130,21 +130,21 @@
             display: flex;
             width: 100%;
             height: 100%;
-            padding: 48px;
-            gap: 28px;
+            padding: 38px;
+            gap: 20px;
             z-index: 1;
         }
         #share-card-canvas.mode-sidebar { flex-direction: row; align-items: center; }
         #share-card-canvas.mode-bottom { flex-direction: column; justify-content: flex-start; }
         #share-card-photo {
             position: relative;
-            border-radius: 24px;
+            border-radius: 18px;
             overflow: hidden;
             background: rgba(255,255,255,0.05);
-            box-shadow: 0 20px 50px rgba(0,0,0,0.35);
+            box-shadow: 0 16px 44px rgba(0,0,0,0.32);
             flex-shrink: 0;
-            width: 680px;
-            height: 960px;
+            width: 668px;
+            height: 944px;
         }
         #share-card-photo img { width: 100%; height: 100%; object-fit: cover; display: block; }
         #share-card-photo::after {
@@ -161,21 +161,22 @@
             gap: 12px;
             background: rgba(15,23,42,0.55);
             border: 1px solid rgba(255,255,255,0.06);
-            border-radius: 24px;
-            padding: 24px 26px;
+            border-radius: 18px;
+            padding: 20px 22px;
             backdrop-filter: blur(6px);
             box-shadow: 0 10px 30px rgba(0,0,0,0.25);
         }
         #share-card-header { display: flex; flex-direction: column; gap: 6px; }
-        #share-card-title { font-size: 1.6rem; font-weight: 800; line-height: 1.2; color: #e2e8f0; }
-        #share-card-cigar-name { font-size: 1.3rem; font-weight: 700; color: #f8fafc; }
-        #share-card-cigar-size { font-size: 1rem; color: #cbd5e1; }
+        #share-card-title { font-size: 1.8rem; font-weight: 800; line-height: 1.2; color: #e2e8f0; }
+        #share-card-cigar-name { font-size: 1.45rem; font-weight: 700; color: #f8fafc; }
+        #share-card-cigar-size { font-size: 1.1rem; color: #cbd5e1; }
         #share-card-score-row { display: flex; align-items: baseline; gap: 14px; flex-wrap: wrap; }
-        #share-card-score { font-size: clamp(3.5rem, 5vw, 5.2rem); line-height: 1; font-weight: 900; color: #fbbf24; text-shadow: 0 6px 18px rgba(0,0,0,0.35); }
-        #share-card-grade-badge { padding: 8px 16px; border-radius: 999px; font-size: 1.05rem; font-weight: 800; background: rgba(255,255,255,0.12); color: #e0e7ff; border: 1px solid rgba(255,255,255,0.2); }
-        #share-card-username { font-size: 0.95rem; color: #cbd5e1; font-weight: 600; }
-        #share-card-qr-block { margin-top: auto; display: flex; gap: 14px; align-items: flex-end; justify-content: flex-end; flex-wrap: wrap; }
-        #share-card-signature { font-size: 0.9rem; color: #e2e8f0; max-width: 240px; line-height: 1.4; }
+        #share-card-score { font-size: clamp(3.75rem, 5.2vw, 5.5rem); line-height: 1; font-weight: 900; color: #fbbf24; text-shadow: 0 6px 18px rgba(0,0,0,0.35); }
+        #share-card-grade-badge { padding: 9px 18px; border-radius: 999px; font-size: 1.18rem; font-weight: 800; background: rgba(255,255,255,0.12); color: #e0e7ff; border: 1px solid rgba(255,255,255,0.2); }
+        #share-card-username { font-size: 1.05rem; color: #cbd5e1; font-weight: 600; }
+        #share-card-qr-block { margin-top: auto; display: grid; grid-template-columns: 1fr auto; column-gap: 12px; row-gap: 6px; align-items: end; justify-items: end; }
+        #share-card-signature { font-size: 1.05rem; color: #e2e8f0; max-width: none; white-space: nowrap; line-height: 1.35; }
+        #share-card-rating-system { font-size: 0.98rem; color: #cbd5e1; max-width: 260px; text-align: right; line-height: 1.4; }
         #share-card-qrcode {
             width: 200px;
             height: 200px;
@@ -187,6 +188,7 @@
             justify-content: center;
             box-shadow: 0 10px 30px rgba(0,0,0,0.28);
         }
+        #share-card-qrcode { grid-row: 1 / span 2; }
         #share-card-qrcode img { width: 100%; height: 100%; object-fit: contain; }
         #share-card-canvas.mode-bottom #share-card-info { width: 100%; }
     </style>
@@ -360,6 +362,7 @@
                     </div>
                     <div id="share-card-username"></div>
                     <div id="share-card-qr-block">
+                        <div id="share-card-rating-system">Pistacho 评分体系：96-100 卓越 / 90-95 优秀 / 85-89 不错 / 80-84 合格 / &lt;80 需改进</div>
                         <div id="share-card-signature">rated on www.pista-cho.com</div>
                         <div id="share-card-qrcode"></div>
                     </div>
@@ -1545,19 +1548,19 @@
             }
 
             if (ratio <= 1.05) {
-                const padding = 48;
+                const padding = 38;
                 const availableHeight = canvasHeight - padding * 2;
                 const minWidth = 520;
-                const maxWidth = canvasWidth - padding * 2 - 340;
+                const maxWidth = canvasWidth - padding * 2 - 320;
                 const widthFromHeight = availableHeight * ratio;
                 const width = Math.max(minWidth, Math.min(maxWidth, widthFromHeight));
                 const height = Math.min(availableHeight, Math.round(width / ratio));
                 return { mode: 'sidebar', width, height };
             }
 
-            const padding = 48;
+            const padding = 38;
             const availableWidth = canvasWidth - padding * 2;
-            const maxHeight = canvasHeight - padding * 2 - 360;
+            const maxHeight = canvasHeight - padding * 2 - 340;
             const minHeight = 520;
             const heightFromWidth = availableWidth / ratio;
             const height = Math.max(minHeight, Math.min(maxHeight, heightFromWidth));
